<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<Preference-->
        <!--android:title="@string/profilePartLabel"-->
        <!--android:key="profile"-->
        <!--android:layout="@layprefs_customstom" />-->

    <!--<PreferenceCategory-->
        <!--android:title="@string/preferencesPartLabel">-->

    <EditTextPreference
        android:key="bio"
        android:title="@string/aboutLabel"
        android:summary="@string/aboutDescription"
        android:layout="@layout/prefs_custom"/>

    <ListPreference
        android:key="alert"
        android:title="@string/alertLabel"
        android:summary="@string/alertDescription"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"
        android:defaultValue="4"
        android:dialogTitle="@string/alertLabel"
        android:layout="@layout/prefs_custom"/>

    <SwitchPreference
        android:key="privacy"
        android:summary="@string/privacyDescription"
        android:title="@string/privacyLabel"
        android:layout="@layout/prefs_custom"/>

</PreferenceScreen>