<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_account_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:background="@android:color/white">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp">

        <!-- Have an Account Button, Clear Buton -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearButton"
                android:visibility="invisible">
            </Button>
            <Button
                android:id="@+id/have_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haveAccountButton">
            </Button>
        </LinearLayout>

        <!-- Character Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charNameLabel"
            android:layout_marginVertical="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/character_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint=""/>

            <ImageView
                android:id="@+id/nameCheck"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/availableLabel"
                android:layout_margin="5dp"/>


        </LinearLayout>

        <!-- Full Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullNameLabel"
            android:layout_marginVertical="5dp"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp" />

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordLabel"
            android:layout_marginVertical="5dp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp" />

        <!-- Picture -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pictureLabel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/changeProfile"/>

        </LinearLayout>

        <!-- Save button -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton"
                android:enabled="false"
                android:layout_marginBottom="50dp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
