<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <!-- Profile -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profilePartLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fullnameText"
                        style="@style/SettingsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/fullnamePlaceholder" />

                    <TextView
                        android:id="@+id/usernameText"
                        style="@style/SettingsDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usernamePlaceholder" />
                </LinearLayout>

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signOutButton"
                    android:theme="@style/MyButton" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/SectionDivider" />

        <!-- Preferences -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:orientation="vertical">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/preferencesPartLabel" />

            <LinearLayout
                android:background="@drawable/selector"
                android:id="@+id/aboutSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    style="@style/SettingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutLabel" />

                <TextView
                    style="@style/SettingsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutDescription" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:background="@drawable/selector"
                android:id="@+id/alertSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    style="@style/SettingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alertLabel" />

                <TextView
                    style="@style/SettingsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alertDescription" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/privacySettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacyLabel" />

                    <TextView
                        style="@style/SettingsDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacyDescription" />
                </LinearLayout>

                <Switch
                    android:id="@+id/privacySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>